==> taltech-eailab-courses/ias0360-lab-excercises-2026/lab_2_2/imu/data_collection/icm20948/icm20948.c <==
#include "icm20948.h"
#include <string.h>
#define I2C_PORT i2c1

char I2C_ReadOneByte(char reg)
{
	char buf;
	i2c_write_blocking(I2C_PORT,I2C_ADD_ICM20948,&reg,1,true);
	i2c_read_blocking(I2C_PORT,I2C_ADD_ICM20948,&buf,1,false);
	return buf;
}

void I2C_WriteOneByte( char reg, char value)
{
	char buf[]={reg,value};
	i2c_write_blocking(I2C_PORT,I2C_ADD_ICM20948,buf,2,false);
}

void imuInit(IMU_EN_SENSOR_TYPE *penMotionSensorType)
{
	bool bRet = false;
	i2c_init(I2C_PORT,400*1000); 
	gpio_set_function(6, GPIO_FUNC_I2C);
    gpio_set_function(7, GPIO_FUNC_I2C);
    gpio_pull_up(6);
    gpio_pull_up(7);
	bRet = icm20948Check();
	if( true == bRet)
	{
		*penMotionSensorType = IMU_EN_SENSOR_TYPE_ICM20948;
		icm20948init();
	}
	else
	{
		*penMotionSensorType = IMU_EN_SENSOR_TYPE_NULL;
	}
	q0 = 1.0f;  
	q1 = 0.0f;
	q2 = 0.0f;
	q3 = 0.0f;

	return;
}

void icm20948init(void)
{

  /* user bank 0 register */
  I2C_WriteOneByte( REG_ADD_REG_BANK_SEL, REG_VAL_REG_BANK_0);
  I2C_WriteOneByte( REG_ADD_PWR_MIGMT_1,  REG_VAL_ALL_RGE_RESET);
  sleep_ms(10);
  I2C_WriteOneByte( REG_ADD_PWR_MIGMT_1,  REG_VAL_RUN_MODE);  

  /* user bank 2 register */
  I2C_WriteOneByte( REG_ADD_REG_BANK_SEL, REG_VAL_REG_BANK_2);
  I2C_WriteOneByte( REG_ADD_GYRO_SMPLRT_DIV, 0x07);
  I2C_WriteOneByte( REG_ADD_GYRO_CONFIG_1,   
                  REG_VAL_BIT_GYRO_DLPCFG_6 | REG_VAL_BIT_GYRO_FS_1000DPS | REG_VAL_BIT_GYRO_DLPF);
  I2C_WriteOneByte( REG_ADD_ACCEL_SMPLRT_DIV_2,  0x07);
  I2C_WriteOneByte( REG_ADD_ACCEL_CONFIG,
                  REG_VAL_BIT_ACCEL_DLPCFG_6 | REG_VAL_BIT_ACCEL_FS_2g | REG_VAL_BIT_ACCEL_DLPF);

  /* user bank 0 register */
  I2C_WriteOneByte( REG_ADD_REG_BANK_SEL, REG_VAL_REG_BANK_0); 

  sleep_ms(100);
  /* offset */
  icm20948GyroOffset();

  icm20948MagCheck();

  icm20948WriteSecondary( I2C_ADD_ICM20948_AK09916|I2C_ADD_ICM20948_AK09916_WRITE,
                               REG_ADD_MAG_CNTL2, REG_VAL_MAG_MODE_20HZ);  
  return;
}
