==> ms1432/Figury-3D/source/icm20948.c <==
#include "icm20948.h"
#include <string.h>
#include "fsl_debug_console.h"

uint8_t I2C_ReadOneByte(uint8_t reg) {

	uint8_t buf;
	size_t txCount        = 0xFFU;

	if (kStatus_Success == LPI2C_MasterStart(I2C_base, I2C_ADD_ICM20948, kLPI2C_Write)) {

		do {
			LPI2C_MasterGetFifoCounts(I2C_base, NULL, &txCount);
		}while (txCount);

		LPI2C_MasterSend(I2C_base, &reg, 1);

		LPI2C_MasterRepeatedStart(I2C_base, I2C_ADD_ICM20948, kLPI2C_Read);
		LPI2C_MasterReceive(I2C_base, &buf, 1);

		LPI2C_MasterStop(I2C_base);
	}

	return buf;
}

void I2C_WriteOneByte( uint8_t reg, uint8_t value) {

	uint8_t tx_buff[]={reg,value};
	size_t txCount        = 0xFFU;

	if (kStatus_Success == LPI2C_MasterStart(I2C_base, I2C_ADD_ICM20948, kLPI2C_Write)) {
		do {
			LPI2C_MasterGetFifoCounts(I2C_base, NULL, &txCount);
		}while (txCount);
		LPI2C_MasterSend(I2C_base, tx_buff, 2);

		LPI2C_MasterStop(I2C_base);
	}

}

void imuInit(LPI2C_Type *base, IMU_EN_SENSOR_TYPE *penMotionSensorType) {

	I2C_base=base;
	bool bRet = false;

	bRet = icm20948Check();
	if( true == bRet)
	{
		*penMotionSensorType = IMU_EN_SENSOR_TYPE_ICM20948;
		icm20948init();
	}
	else
	{
		*penMotionSensorType = IMU_EN_SENSOR_TYPE_NULL;
	}
	q0 = 1.0f;  
	q1 = 0.0f;
	q2 = 0.0f;
	q3 = 0.0f;

	return;
}

void icm20948init(void)
{

	/* user bank 0 register */
	I2C_WriteOneByte( REG_ADD_REG_BANK_SEL, REG_VAL_REG_BANK_0);
	I2C_WriteOneByte( REG_ADD_PWR_MIGMT_1,  REG_VAL_ALL_RGE_RESET);
	sleep_ms(10);
	I2C_WriteOneByte( REG_ADD_PWR_MIGMT_1,  REG_VAL_RUN_MODE);

	/* user bank 2 register */
	I2C_WriteOneByte( REG_ADD_REG_BANK_SEL, REG_VAL_REG_BANK_2);
	I2C_WriteOneByte( REG_ADD_GYRO_SMPLRT_DIV, 0x0A); // smprate 102 Hz
	I2C_WriteOneByte( REG_ADD_GYRO_CONFIG_1, REG_VAL_BIT_GYRO_DLPCFG_2 | REG_VAL_BIT_GYRO_FS_1000DPS | REG_VAL_BIT_GYRO_DLPF);
	//I2C_WriteOneByte( REG_ADD_GYRO_CONFIG_2, 0x07); // 128x averaging


	I2C_WriteOneByte( REG_ADD_ACCEL_SMPLRT_DIV_1,  0x00);
	I2C_WriteOneByte( REG_ADD_ACCEL_SMPLRT_DIV_2,  0x0A); // smprate 102 Hz
	I2C_WriteOneByte( REG_ADD_ACCEL_CONFIG_1, REG_VAL_BIT_ACCEL_DLPCFG_2 | REG_VAL_BIT_ACCEL_FS_16g | REG_VAL_BIT_ACCEL_DLPF);

	/* user bank 0 register */
	I2C_WriteOneByte( REG_ADD_REG_BANK_SEL, REG_VAL_REG_BANK_0);

	sleep_ms(100);
	/* offset */
	icm20948GyroOffset();

	//icm20948MagCheck();

	//icm20948WriteSecondary( I2C_ADD_ICM20948_AK09916|I2C_ADD_ICM20948_AK09916_WRITE,
	//		REG_ADD_MAG_CNTL2, REG_VAL_MAG_MODE_20HZ);


	//INT
	//I2C_WriteOneByte( 0x0F,  0x80);
	//I2C_WriteOneByte( 0x11,  0x01);


	//Magnetometr
	I2C_WriteOneByte( REG_ADD_REG_BANK_SEL, REG_VAL_REG_BANK_0); //swtich bank0
	I2C_WriteOneByte( 0x0F, 0x02); //bypas

	sleep_ms(100);

	I2C_WriteByte(I2C_ADD_ICM20948_AK09916,  REG_ADD_MAG_CNTL2, 0x08); // 100Hz






	return;
}
